Fixed uneven scoreboard header in stylesheets.

--- a/src/main/resources/z03/pap22z/style.css
+++ b/src/main/resources/z03/pap22z/style.css
@@ -131,20 +131,17 @@
 }
 
 .table-view .column-header-background {
-    -fx-text-background-color: black;
-    -fx-font-family: "Arial Narrow";
-    -fx-background-color: linear-gradient(derive(-fx-color-outline, -50%), derive(-fx-color-outline, -10%));
-    /* -fx-border-color: -fx-color-outline; */
-    /* -fx-border-radius: 7px 7px 0px 0px; */
-    /* -fx-border-width: 3px; */
-    /* -fx-border-insets: -2px 9px -2px -2px; */
-    -fx-background-radius: 2px 2px 0px 0px;
-    -fx-background-insets: 0 11px 0 0;
-    -fx-padding: 0 0 5px 0;
+    -fx-background-color: transparent;
 }
 
 .table-view .column-header {
-    -fx-background-color: transparent;
+    -fx-text-background-color: black;
+    -fx-background-color: linear-gradient(derive(-fx-color-outline, -50%), derive(-fx-color-outline, -10%));
+    -fx-font-family: "Arial Narrow";
+    -fx-background-radius: 2px 2px 0px 0px;
+    -fx-background-insets: 0;
+    /* -fx-background-insets: 0 11px 0 0; */
+    -fx-padding: 0 0 5px 0;
 }
 
 .table-view .table-cell {
